syntax = "proto3";
package todo;
option go_package = "./pb";

service TodoQuery {
	rpc Get (TodoGetRequest) returns (TodoGetResponse);
}

message TodoGetRequest {
	string id = 1;
};
message TodoGetResponse {
	Todo item = 1;

	message Todo {
		string id = 1;
		string title = 2;
		string body = 3;
	}
};

service TodoCommand {
	rpc Create (TodoCreateRequest) returns (TodoCreateResponse);
}

message TodoCreateRequest {
	string title = 1;
	string body = 2;
};
message TodoCreateResponse {
  string id = 1;
};